--- a/index.html
+++ b/index.html
@@ -69,12 +69,9 @@
 
       <a href="#" class="header-logo">
         <picture class="header-logo__picture">
-					<source class="header-logo__img" media="(min-width: 1025px)" type="image/webp" srcset="img/logo1x.png 1x, img/logo2x.png 2x" alt="логотип">
-
-					<source class="header-logo__img" media="(max-width: 1025px) and (min-width: 571px)" type="image/webp" srcset="img/logo1x-1024.png 1x, img/logo2x-1024.png 2x" alt="логотип">
-          <source class="header-logo__img" media="(max-width: 570px)" type="image/webp" srcset="img/logo1x-320.png 1x, img/logo2x-320.png 2x" alt="логотип">
-
-					<img class="header-logo__img" src="img/logo1x.png" alt="логотип">
+					<source class="header-logo__img" media="(max-width: 1024px)" type="image/webp" srcset="img/logo1x-1024.png 1x, img/logo2x-1024.png 2x">
+          <source class="header-logo__img" media="(max-width: 475px)" type="image/webp" srcset="img/logo1x-320.png 1x, img/logo2x-320.png 2x">
+          <img class="header-logo__img" src="img/logo1x.png" alt="логотип">
 				</picture>
       </a>
       <div class="header-bar">
@@ -230,7 +227,7 @@
 
           <li class="questions__item questions-item questions__item-js">
             <button type="button" class="questions-item__visible btn">
-              <span class="questions-item__head">У меня есть свой проект. Сможем ли мы его доработать&nbsp;/&nbsp;реализовать?</span> <span class ="btn questions-item__btn questions__btn-js"></span>
+              <span class="questions-item__head">У меня есть свой проект. Сможем ли мы его доработать&nbsp;/ реализовать?</span> <span class ="btn questions-item__btn questions__btn-js"></span>
             </button>
 
             <div class="questions-item__invisible">
@@ -256,7 +253,7 @@
 
           <li class="questions__item questions-item questions__item-js">
             <button type="button" class="questions-item__visible btn">
-              <span class="questions-item__head">Я выбираю между разными компаниями. В&nbsp;чём ваше отличие?</span> <span class ="btn questions-item__btn questions__btn-js"></span>
+              <span class="questions-item__head">Я выбираю между разными компаниями. В&nbsp;чём&nbsp;ваше отличие?</span> <span class ="btn questions-item__btn questions__btn-js"></span>
             </button>
 
             <div class="questions-item__invisible questions__invisible-js">
@@ -282,7 +279,7 @@
 
           <li class="questions__item questions-item questions__item-js">
             <button type="button" class="questions-item__visible btn">
-              <span class="questions-item__head">Могу ли я делегировать вам работу / согласование с подрядчиком / организацией?</span> <span class ="btn questions-item__btn questions__btn-js"></span>
+              <span class="questions-item__head">Могу ли я делегировать вам работу / согласование с подрядчиком&nbsp;/ организацией?</span> <span class ="btn questions-item__btn questions__btn-js"></span>
             </button>
 
             <div class="questions-item__invisible">
@@ -308,7 +305,7 @@
 
           <li class="questions__item questions-item questions__item-js">
             <button type="button" class="questions-item__visible btn">
-              <span class="questions-item__head">Могу ли я вернуть деньги на каком-либо из этапов работ?</span> <span class ="btn questions-item__btn questions__btn-js"></span>
+              <span class="questions-item__head">Могу ли я вернуть деньги на&nbsp;каком-либо из этапов работ?</span> <span class ="btn questions-item__btn questions__btn-js"></span>
             </button>
 
             <div class="questions-item__invisible questions__invisible-js">
@@ -341,8 +338,8 @@
         <div class="footer__menu footer-menu">
           <a href="#" class="footer-logo">
             <picture class="footer-logo__picture">
-              <source class="footer-logo__img" media="(min-width: 575px)" type="image/webp" srcset="img/footer-logo1x.png 1x, img/footer-logo2x.png 2x" alt="логотип">
-              <source class="footer-logo__img" media="(max-width: 575px)" type="image/webp" srcset="img/footer-logo1x-320.png 1x, img/footer-logo2x-320.png 2x" alt="логотип">
+              <source media="(min-width: 575px)" type="image/webp" srcset="img/footer-logo1x.png 1x, img/footer-logo2x.png 2x" class="footer-logo__img">
+              <source media="(max-width: 575px)" type="image/webp" srcset="img/footer-logo1x-320.png 1x, img/footer-logo2x-320.png 2x" class="footer-logo__img">
               <img class="footer-logo__img" src="img/footer-logo1x.png" alt="логотип">
             </picture>
             
