--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <span class="header-burger-line"></span>
       </button>
 
-      <a href="#" class="header-logo">
+      <a href="#" class="header-logo" aria-label="Сайт Евклид. Вернуться на главную">
         <picture class="header-logo__picture">
           <source class="header-logo__img" media="(max-width: 475px)" srcset="img/logo1x-320.svg">
 					<source class="header-logo__img" media="(max-width: 1024px)" srcset="img/logo1x-768.svg">
@@ -96,7 +96,7 @@
 
         <form class="header__search header-search">
           <input type="search" name="header-search" placeholder="Поиск" class="input-reset header-search__field">
-          <button type="button" aria-label="найти" class="btn header-search__submit"></button>
+          <button type="button" aria-label="поиск" class="btn header-search__submit"></button>
         </form>
       </div>
     </div>
@@ -389,7 +389,7 @@
   <footer class="footer">
       <div class="container footer-container">
         <div class="footer__menu footer-menu">
-          <a href="#" class="footer-logo">
+          <a href="#" class="footer-logo" aria-label="Сайт Евклид. Вернуться на главную">
             <picture class="footer-logo__picture">
               <source media="(max-width: 375px)" type="image" srcset="img/footer-logo1x-320.svg" class="footer-logo__img">
               <source media="(min-width: 376px)" type="image" srcset="img/footer-logo1x.svg " class="footer-logo__img">
@@ -410,7 +410,7 @@
             </ul>
           </nav>
 
-          <ul class="list-reset footer__social-list">
+          <ul class="list-reset footer__social-list" aria-label = "ссылка на наши странички в социальных сетях">
             <li class="footer__social-item">
               <a href="#" class="footer__social-link" aria-label="фэйсбук">
                 <svg class="footer__social-img"><use class="social-svg" xlink:href="#facebook" x="0" y="0"/></svg>
