--- a/index.html
+++ b/index.html
@@ -176,10 +176,10 @@
       <div class="container worktab-container">
         <h2 class="section-title worktab-title">Как мы работаем</h2>
         <ul class="list-reset worktab-step__buttons">
-          <li class="step__item"><button class="btn step-item__btn active" data-path="one">1 шаг</button></li>
-          <li class="step__item"><button class="btn step-item__btn" data-path="two">2 шаг</button></li>
-          <li class="step__item"><button class="btn step-item__btn" data-path="tree">3 шаг</button></li>
-          <li class="step__item"><button class="btn step-item__btn" data-path="four">4 шаг</button></li>
+          <li class="step__item"><button class="btn step-item__btn active" data-path="one" aria-label="первый шаг">1 шаг</button></li>
+          <li class="step__item"><button class="btn step-item__btn" data-path="two" aria-label="второй шаг">2 шаг</button></li>
+          <li class="step__item"><button class="btn step-item__btn" data-path="tree" aria-label="третий шаг">3 шаг</button></li>
+          <li class="step__item"><button class="btn step-item__btn" data-path="four" aria-label="четвертый шаг">4 шаг</button></li>
         </ul>
       
       <div class="list-reset worktab-description__list worktab-description-active" data-target = "one">
